--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -18,8 +18,9 @@
 
 ### typeof操作符
 返回字符串：
-1. undefined -- 值未定义。
-2. boolean -- 布尔值。
-3. string -- 字符串。
-4. number -- 数值。
-5. object -- 
+1. "undefined" -- 值未定义。
+2. "boolean" -- 布尔值。
+3. "string" -- 字符串。
+4. "number" -- 数值。
+5. "object" -- 对象或null。
+6. "function" -- 函数
