--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -7,14 +7,15 @@
 1. 不允许给未经声明的变量赋值，否则报ReferenceError
 
 ### 数据类型
-1. 基本数据类型
-- Undefined
-- Null
-- Boolean
-- Number
-- String
-2. 复杂数据类型
-- Object
+基本数据类型
+1. Undefined
+2. Null
+3. Boolean
+4. Number
+5. String
+
+复杂数据类型
+1. Object
 
 ### typeof操作符
 返回字符串：
