--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -1,20 +1,21 @@
 # 第三章 基本概念
 
-### 变量
+## 变量
 变量未经初始化时，值为undefined
 
-### 严格模式
+## 严格模式
 1. 不允许给未经声明的变量赋值，否则报ReferenceError
 
-### 数据类型
-基本数据类型
+## 数据类型
+
+### 基本数据类型
 1. Undefined
 2. Null
 3. Boolean
 4. Number
 5. String
 
-复杂数据类型
+### 复杂数据类型
 1. Object
 
 ### typeof操作符
