--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -31,6 +31,7 @@
 只有一个值，即 undefined，声明变量但未对其加以初始化时，这个变量的值就是undefined。
 ```JavaScript
 var msg;
+alert(typeof msg); //"undefined"
 alert(msg == undefined); //true
 ```
 
