--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -36,4 +36,9 @@ alert(msg == undefined); //true
 ```
 
 ### Null类型
-也只有一个值，即 null，从逻辑角度，null表示一个空指针对象
+也只有一个值，即 null，从逻辑角度，null表示一个空指针对象。
+undefined派生自null
+```JavaSript
+alert(null == undefined
+```
+
