--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -4,8 +4,8 @@
 变量未经初始化时，值为undefined
 
 ## 严格模式
-1. 不允许给未经声明的变量赋值，否则报ReferenceError
-2. 0开头的8进制数值
+1. 不允许给未经声明的变量赋值，否则报ReferenceError。
+2. 八进制字面量数值（无效，支持严格模式的浏览器会抛出异常。
 
 ## 数据类型
 
