--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -47,4 +47,5 @@ alert(null == undefined); //true
 
 ### Number类型
 - 八进制：0开头；十六进制：0x开头
-- 不要对浮点数值进行判断，因为不精确（如0.1+0.2
+- 不要对浮点数值进行判断，因为不精确（如0.1 + 0.2)
+- 支持的最小值：5e-324；最大值：
