--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -50,4 +50,5 @@ alert(null == undefined); //true
 - 不要对浮点数值进行判断，因为不精确（如0.1 + 0.2)
 - 支持的最小值：5e-324；最大值：1.7976931348623157e+308
 - 超过支持的范围会被转为 Infinity 或 -Infinity，可用 isFinite(num)进行判断
-- NaN，非数值，任何涉及NaN的计算都会返回NaN，NaN与任何值都不相等，包括
+- NaN，非数值，任何涉及NaN的计算都会返回NaN，NaN与任何值都不相等，包括NaN本身
+- isNaN()函数，可以转换为数值则返回false，其他返回true
