--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -53,3 +53,5 @@ alert(null == undefined); //true
 - NaN，非数值，任何涉及NaN的计算都会返回NaN，NaN与任何值都不相等，包括NaN本身
 - isNaN()函数，可以转换为数值则返回false，其他返回true
 - 数值转换：Number()、parseInt()、parseFloat()
+
+### String类型
