--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -59,4 +59,5 @@ alert(null == undefined); //true
 ### Object类型
 1. Object每个实例都具有下列属性和方法：
 	- constructor，保存着用于创建当前对象的函数
-	- hasOwnProperty(propertyName
+	- hasOwnProperty(propertyName)，检查给定的属性名在当前对象实例中是否存在
+	- 
