--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -61,4 +61,6 @@ alert(null == undefined); //true
 	- constructor，保存着用于创建当前对象的函数
 	- hasOwnProperty(propertyName)，检查给定的属性名在当前对象实例中是否存在
 	- isPrototypeOf(object)，检查传入的对象是否是当前对象的原型
-	- propertyIsEnumerable(propertyName)，检查给定属性是否能使用for-in语句来
+	- propertyIsEnumerable(propertyName)，检查给定属性是否能使用for-in语句来枚举
+	- toLocaleString()，返回对象的字符串表示，与执行环境的地区对应
+	- toString
