--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -63,4 +63,5 @@ alert(null == undefined); //true
 	- isPrototypeOf(object)，检查传入的对象是否是当前对象的原型
 	- propertyIsEnumerable(propertyName)，检查给定属性是否能使用for-in语句来枚举
 	- toLocaleString()，返回对象的字符串表示，与执行环境的地区对应
-	- toString
+	- toString()，返回对象的字符串表示
+	- valueOf()，返回对象的字符串、数值或布尔值表示，通常与toString的返回值相同
