--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -66,3 +66,8 @@ alert(null == undefined); //true
 - toLocaleString()，返回对象的字符串表示，与执行环境的地区对应
 - toString()，返回对象的字符串表示
 - valueOf()，返回对象的字符串、数值或布尔值表示，通常与toString的返回值相同
+
+## 语句
+### with语句
+
+
