--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -69,5 +69,6 @@ alert(null == undefined); //true
 
 ## 语句
 ### with语句
-在with语句代码块内部，每个变量首先被默认为局部变量，若找不到该变量的定义，则
+在with语句代码块内部，每个变量首先被默认为局部变量，若找不到该变量的定义，则会查询with指定对象中是否有同名属性，若存在则使用该值。
+大量使用with语句会
 
