--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -58,7 +58,7 @@ alert(null == undefined); //true
 ### String类型
 
 ### Object类型
-#### Object每个实例都具有下列属性和方法：
+Object每个实例都具有下列属性和方法：
 - constructor，保存着用于创建当前对象的函数
 - hasOwnProperty(propertyName)，检查给定的属性名在当前对象实例中是否存在
 - isPrototypeOf(object)，检查传入的对象是否是当前对象的原型
