--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -7,6 +7,7 @@
 1. 不允许给未经声明的变量赋值，否则报ReferenceError。
 2. 八进制字面量数值（0开头）无效，支持严格模式的浏览器会抛出异常。
 3. 不允许使用with语句
+4. 不能把函数命名为eval、
 
 ## 数据类型
 
@@ -76,3 +77,4 @@ Object每个实例都具有下列属性和方法：
 case值可以是常量、变量、表达式
 case值比较时使用全等操作符
 
+## 函数
