--- a/JavaScript高级程序设计(第三版)/第三章 基本概念.md
+++ b/JavaScript高级程序设计(第三版)/第三章 基本概念.md
@@ -7,7 +7,8 @@
 1. 不允许给未经声明的变量赋值，否则报ReferenceError。
 2. 八进制字面量数值（0开头）无效，支持严格模式的浏览器会抛出异常。
 3. 不允许使用with语句
-4. 不能把函数命名为eval、
+4. 不能把函数、参数命名为eval、arguments
+5. 不能出现两个命名参数同名的情况
 
 ## 数据类型
 
