--- a/JavaScript高级程序设计(第三版)/第五章 引用类型.md
+++ b/JavaScript高级程序设计(第三版)/第五章 引用类型.md
@@ -202,3 +202,130 @@ outer(); // function outer() { inner(); }
 - ES 5 中，新增 bind()方法，会创建一个函数的实例，其this值会被绑定到传给bind()函数的值
 
 - toString、toLocaleString、valueOf，返回函数的代码，内容因浏览器而异
+
+
+
+## 基本包装类型
+
+​		Boolean、Number、String，每当读取一个基本数据类型，后台会创建一个对应的基本包装类型的对象，以便调用相应的方法。步骤：
+
+1. 创建基本包装类型的一个实例
+
+2. 在实例上调用指定方法
+
+3. 销毁实例
+
+    所以不能在运行时为基本包装类型添加属性和方法。
+
+    ```javascript
+    var s1 = "text";
+    s1.color = "red";
+    console.log(s1.color); //undefined
+    ```
+
+
+
+​		对基本包装类型的实例调用 typeof 会返回object，且转换为布尔值时都为true。
+
+​		注意，创建基本数据类型实例（new 操作符），与调用同名的转型函数是不一样的。
+
+```javascript
+var value = "25";
+var num = Number(value);
+console.log(typeof num); //"number"
+
+var obj = new Number(value);
+console.log(typeof obj); //"object"
+```
+
+### Number类型
+
+- toFixed()，返回指定小数位数的数值的字符串表示
+- toExponential()，返回指数表示法的数值的字符串表示，参数指定e前面数值的小数位数
+- toPrecision()，返回合适的数字格式，以上两种都有可能，参数指定数值的所有数字的位数，不包含指数部分
+
+### String类型
+
+- length属性，字符串长度，双字节字符，每个字符也仍算一个字符
+
+- charAt()，返回指定位置的字符
+
+- charCodeAt()，返回指定位置字符的编码
+
+- cancat()，任意个参数，依次拼接到原字符串后面，返回新字符串，原字符串不变
+
+- slice(n, m)，subString(n, m)，返回第n~m的字符串，不传m则取到最后一位
+
+- subStr(n, c)，返回从n开始的c个字符组成的字符串，不传c则取到最后一位
+
+- indexOf()，搜索指定子字符串的位置，没有则返回-1，第二个参数指定开始搜索的位置
+
+- lastIndexOf()，从尾部开始搜索指定子字符串的位置，没有则返回-1，第二个参数指定从尾部开始的位置
+
+- trim()，trimLeft()，trimRight()，返回删除两边、左边、右边的空格的字符串，原字符串不变
+
+- 模式匹配
+
+    - match()，本质上与RegRxp的exec()一样，参数为一个正则表达式或RegRxp对象，返回数组，第一项为匹配整个正则的字符串，后面为捕获组匹配的字符
+    - search()，参数同上，返回第一个匹配项的索引，没有则返回-1
+
+- replace()，
+
+    - 第一个参数指定需要被替换的文本，可以是字符串（只会替换第一个），也可以是正则（指定全局标识，即可替换所有子字符串）；
+
+    - 第二个参数指定将要换入的字符串或函数，若是字符串，使用特殊的字符序列，可以使用最近一次匹配结果的内容，字符序列如下：
+
+        - $$，替换为$
+        - $&，匹配整个模式的子字符串
+        - $'，匹配的子字符串左边的子字符串
+        - $`，匹配的子字符串右边的子字符串
+        - $n，第n个捕获组匹配的子字符串（0~9）
+        - $nn，第nn个捕获组匹配的子字符串（01~99）
+
+        若是函数，在只有一个匹配项的情况下，会向该函数传入三个参数，匹配项、匹配项在字符串中的位置、原始字符串。若有捕获组定义，传入的参数为：匹配项、第一、第二、...个捕获组的匹配项、匹配项在字符串中的位置，原始字符串。返回将要换入的字符串。
+
+- split()，按指定分隔符分隔字符串，返回数组，第二个参数可以指定数组长度
+
+- localeCompare()，比较字符串在字母表中的位置，若字符串在参数字符串之前，返回-1，相等返回0，在之后返回1
+
+- fromCharCode()，传入一个或多个字符编码，返回组成的字符串
+
+- html方法，将字符串格式化为html标签格式
+
+
+
+## 单体内置对象
+
+内置对象：由ECMAScript提供，不依赖宿主环境，在程序执行前就已存在实例，如Object、Array等。
+
+单体内置对象：
+
+### Global对象
+
+- URI编码方法
+    - encodeURI()，主要用于整个URI，不会对本身属于URI的特殊字符进行编码，例如冒号、斜杠
+    - encodeURIComponent()，主要对URI中某一段进行编码，会对所有非标准字符进行编码，通常用于对附加在URI后面的字符串使用
+    - decodeURI()，decodeURIComponent()，与上方两个方法对应
+- eval()方法
+    - 被执行的代码具有与该执行环境相同的作用域链
+    - 严格模式下，外部访问不到eval()中创建的任何变量或函数
+- window对象，web浏览器将global作为window对象的一部分加以实现的，详见第八章
+
+### Math对象
+
+- min()，max()，返回传入参数的最小值、最大值，利用函数对象的apply方法，可以方便地传入数组
+
+    ```javascript
+    var values = [1,2,3,4,5,6,7];
+    var max = Math.max.apply(Math, values);
+    ```
+
+- 舍入方法
+
+    - Math.ceil()，向上舍入（进一）
+    - Math.floor()，向下舍入
+    - Math.round()，四舍五入
+
+- random()，返回x，0<= x < 1
+
+- 其他数学方法，对数、平方根、正余弦等
