--- a/JavaScript高级程序设计(第三版)/第六章 面向对象程序设计.md
+++ b/JavaScript高级程序设计(第三版)/第六章 面向对象程序设计.md
@@ -339,23 +339,60 @@ Object.defineProperty(Person.prototype, "constructor", {
 
 ### 组合使用构造函数模式和原型模式
 
+​		创建自定义类型最常见的方式，就是组合使用构造函数模式与原型模式。构造函数模式用于定义实例属性、接收参数；原型模式用于定义方法和共享的属性。例：
+
+```javascript
+function Person(name, age) {
+    this.name = name;
+    this.age = age;
+}
+
+Person.prototype = {
+    constructor : Person,
+    sayName : function() {
+        console.log(this.name);
+    }
+};
+```
 
 
 
+## 继承
 
-### 动态原型模式
+​		主要依靠原型链实现。
+
+### 原型链
+
+​		基本思想：利用原型让一个引用类型继承另一个引用类型的属性和方法：
+
+​		让原型对象等于另一个类的实例，此时的原型对象将包含一个指向另一个原型的指针：
+
+```javascript
+function SuperType(){
+    this.property = true;
+}
+SuperType.prototype.getSuperValue = function(){
+    return this.property;
+}
+
+function SubType(){
+    this.subProperty = false;
+}
+
+//继承了SuperType
+SubType.prototype = new SuperType();
+
+SubType.protoType.getSubValue = function(){
+    return this.subProperty;
+}
+
+var instance = new SubType();
+console.log(instance.getSuperValue);//true
+```
 
 
 
-
-
-### 寄生构造函数模式
-
-
-
-
-
-### 稳妥构造函数模式
+//todo
 
 
 
