--- a/JavaScript高级程序设计(第三版)/第十三章 事件.md
+++ b/JavaScript高级程序设计(第三版)/第十三章 事件.md
@@ -116,3 +116,245 @@ var EventUtil = {
 
 ### IE 中的事件对象
 
+- 使用 DOM 0 级方法添加事件处理程序时，event 对象是作为 window 对象的一个属性存在的
+- 通过 attachEvent() 方法添加的，会有 event 对象传入函数，也可以用 window 的属性获取
+- 通用属性：
+    - cancelBubble，默认为 false，将其设置为 true 就可以取消事件冒泡（与 DOM 中的 stopPropagation() 方法的作用相同）
+    - returnValue，默认为 true，将其设置为 false 就可以取消事件的默认行为（与 DOM 中的 preventDefault() 方法作用相同）
+    - srcElement，事件的目标，与 DOM 中的 target 相同
+    - type，事件类型
+
+### 跨浏览器的事件对象
+
+​		可对**跨浏览器的事件处理程序进行扩展增强**：
+
+```javascript
+var EventUtil = {
+    addHandler : function(element, type, handler){
+        if(element.addEventListener){
+            element.addEventListener(type, handler, false);
+        }else if(element.attachEvent){
+            element.attachEvent("on" + type, handler);
+        }else{
+            element["on" + type] = handler;
+        }
+    },
+    removeHandler : function(element, type, handler){
+        if(element.removeEventListener){
+            element.removeEventListner(type, handler, false);
+        }else if(element.detachEvent){
+            element.detachEvent("on" + type, handler);
+        }else{
+            element["on" + type] = null;
+        }
+    },
+    
+    
+    getEvent : function(event){
+        return event ? event : window.event;
+    },
+    getTarget : function(event){
+        return event.target || event.srcElement;
+    },
+    preventDefault : function(event){
+        if(event.preventDefault){
+            event.preventDefault();
+        }else{
+            event.returnValue = false;
+        }
+    },
+    stopPropagation : function(event){
+        if(event.stopPropagation){
+            event.stopPropagation();
+        }else{
+            event.cancelBubble = true;
+        }
+    }
+};
+```
+
+
+
+## 事件类型
+
+### UI 事件
+
+- load 事件，页面完全加载后（包括图片、js 文件、css 文件 等外部资源），就会触发 window 上的 load 事件，但 event.target 属性是指向 document 的。也可以在 body 标签设置 onload 特性来指定该事件处理程序。图片、js 文件、css 文件 也有 onload 事件。
+- unload 事件，文档完全被卸载后触发。
+- resize 事件，浏览器窗口被改变高度或宽度时，在 window 对象上触发，大部分浏览器会在窗口变化 1 像素时就触发 resize 事件，而 Firefox 只会在用户停止调整窗口大小时才会触发。要注意不要在此事件中调用大量计算，不然会引起卡顿。
+- scroll 事件，在 window 上触发，可通过 scrollLeft、scrollTop 属性来监控滚动情况。
+
+### 焦点事件
+
+​		页面元素获得或失去焦点时触发，再利用 docuemnt.fasFocus() 方法和 document.activeElement 属性，可以知晓用户在页面上的行踪。焦点事件有以下几种：
+
+- blur，失去焦点时触发，该事件不会冒泡
+- focus，获得焦点时触发，不会冒泡
+- focusin，获得焦点时触发，会冒泡
+- focusout，失去焦点时触发
+
+### 鼠标与滚轮事件
+
+- click，用户单击主鼠标键，或按下回车键时触发
+- dblclick，双击主鼠标键
+- mousedown，按下任意鼠标键
+- mouseenter，鼠标从元素外部首次移动到元素范围之内时触发，不冒泡
+- mouseleave，位于元素上方的光标移动到元素范围之外时触发，不冒泡
+- mousemove，鼠标指针在元素内部移动时重复触发
+- mouseout，鼠标指针位于元素上方，用户将其移入另一个元素时触发
+- mouseover，鼠标指针位于元素外部，用户将其首次移入另一个元素边界之内时触发
+- mouseup，用户释放鼠标按钮时触发
+
+#### 客户区坐标位置
+
+​		表示事件发生时，鼠标指针在视口中的位置，保存在 event 的 clientX、clientY 属性中，与页面位置无关。
+
+#### 页面坐标位置
+
+​		表示事件发生时，鼠标指针在页面中的位置，保存在 event 的 pageX、pageY 属性中。在页面没有滚动的情况下，pageX、pageY 和 clientX、clientY 的值相等。
+
+#### 屏幕坐标位置
+
+​		表示事件发生时，鼠标指针在整个电脑屏幕中的位置，保存在 event 的 screenX、screenY 属性中。
+
+#### 修改键
+
+​		按下鼠标时，键盘上的某些键的状态也可以影响到所要采取的操作，即 Shift、Ctrl、Alt、Meta 键，event 对象中用以下属性来表示这些修改键的状态，按下时为 true，否则为 false：
+
+- shiftKey
+- ctrlKey
+- altKey
+- metaKey
+
+### 键盘与文本事件
+
+​		键盘：
+
+- keydown，按下键盘上的**任意按键**时触发，若按住不放，则重复触发此事件。
+- keypress，按下键盘上的**字符按键**时触发，若按住不放，则重复触发此事件。
+- keyup，释放键盘上的键时触发。
+
+​		文本事件：
+
+- textInput，这个事件是对 keypress 的补充，用意是在将文本显示给用户之前更容易拦截文本
+
+#### 键码
+
+​		触发 keydown 和 keyup 时，event 对象的 keyCode 属性包含一个代码，与键盘上的特定键存在映射关系
+
+### HTML 5 事件
+
+- contextmenu 事件，上下文菜单，会冒泡
+- beforeunload 事件，浏览器卸载页面之前触发，该事件不可彻底取消，否则就无法关闭页面了
+- DOMContentLoaded 事件，形成完整的 DOM 树之后触发，不会等待处理图片、js、css等文件
+- readystatechange 事件，提供与文档或元素加载状态有关的信息
+- pageshow 和 pagehide 事件，在使用浏览器的“前进”、“后退”功能时，页面会缓存至 bfcache，bfcache中页面的显示和隐藏就会触发这两个事件
+- hashchange 事件，URL 参数列表变化时触发（即 URL 中 “#”后面的所有字符串），该事件在 window 对象中触发，此时 event 对象包含两个额外属性：oldURL、newURL
+
+### 设备事件
+
+- orientationchange 事件，移动版 Safari 设备方向改变时触发，在 window.orientation 属性中，值为 0（竖直）、90（向左旋转90度）、-90（向右旋转90度）。
+- MozOrientation 事件，Firefox 浏览器特定事件，设备的加速计检测到设备方向改变时触发，event 对象包含3个属性：x、y、z，值都介于 -1 至 1 之间。
+    - 设备静止竖直状态下，x 为0，y 为0，z 为 1.
+    - 设备向右倾斜，x 减小；向左倾斜，x 增大。
+    - 设备向远离用户的方向倾斜，y 减小；向接近用户方向倾斜，y 增大。
+    - z 轴检测追至加速度，1 表示静止不动，移动时减小，失重状态为 0.
+- deviceorientation 事件，与 MozOrientation 类似，但是意图是告诉开发人员设备的朝向，而不是如何移动。静止放在水平面上时，三个值都为0，x 轴为从左往右；y 轴为从上往下；z 轴为 从后往前。事件触发时，event 包含相对静止状态下的变化信息：
+    - alpha，围绕 z 轴旋转时，y 轴的度数差，0 ~ 360 的浮点数
+    - beta，围绕 x 轴旋转时，z 轴的度数差，-180 ~ 180 的浮点数
+    - gamma，围绕 y 轴旋转时，z 轴的度数差，-90 ~ 90 的浮点数
+    - ablsolute，是否返回绝对值
+    - compassCalibrated，设备的指南针是否校准过
+- devicemotion 事件，可检测设备什么时候移动，触发时 event 有以下属性：
+    - acceleration，包含 x、y、z，表示在不考虑重力的情况下，每个方向的加速度
+    - accelerationIncludingGravity，考虑 z 轴自然重力加速度的情况下，每个方向的加速度
+    - interval，另一个 devicemotion 事件触发前传入
+    - rotationRate，包含表示方向的 alpha、beta、gamma 属性的对象
+    - 前三个属性若读取不到，则为 null
+
+### 触摸与手势事件
+
+#### 触摸事件
+
+- touchstart，触摸屏幕时触发
+- touchmove，在屏幕上滑动时连续触发
+- touchend，从屏幕上移开时触发
+- touchcancel，系统停止跟踪触摸时触发
+
+#### 触摸事件的属性
+
+- touches，当前跟踪的触摸操作的 Touch 对象的数组
+- targetTouchs，特定于事件目标的 Touch 对象的数组
+
+#### 手势事件
+
+- gesturestart，当一个手指已经按在屏幕上，另一个手指又触摸屏幕时触发
+- gesturechange，触摸屏幕的任何一个手指的位置发生变化时触发
+- gestureend，任何一个手指从屏幕上移开时触发
+
+
+
+## 内存和性能
+
+### 事件委托
+
+​		利用事件冒泡机制，将一类事件定义到一个层次较高的节点，甚至到 document 上，再判断 event.target 元素的id，即可知道触发事件的具体元素。
+
+​		优点：
+
+- document 对象很快就可以访问到，且可以在页面生命周期的任何时间点为其添加事件处理程序
+- 在页面中设置事件处理程序所需时间更少
+- 页面占用内存变少
+
+### 移除事件处理程序
+
+​		元素被移除时，若定义过事件处理程序，则该程序不会被销毁，需要我们手动进行移除。
+
+
+
+## 模拟事件
+
+### DOM 中的事件模拟
+
+​		可以在 document 上使用 createEvent() 方法创建 event 对象，接收一个参数，即事件类型的字符串：
+
+- UIEvents：一般化的 UI 事件，键盘、鼠标事件都继承自 UI 事件。DOM 3 中是 UIEvent。
+- MouseEvents：鼠标事件，DOM 3 中是 MouseEvent。
+- MutationEvents：DOM 变动事件，DOM 3 中为 MutationEvent。
+- HTMLEvents：HTML 事件，没有对应的 DOM 3 事件，被分散到其他类型中。
+
+#### 模拟事件
+
+```javascript
+//模拟鼠标事件
+//创建事件对象
+var event = document.createEvent("MouseEvents");
+//初始化事件对象
+event.initMouseEvent(...);//15个参数，不一一列举
+//触发事件
+ele.dispatchEvent(event);
+
+
+//模拟键盘事件
+//创建事件对象
+var event = document.createEvent("KeyEvents");
+//初始化
+event.initKeyEvent(...);//10个参数，不一一列举
+//触发事件
+ele.dispatchEvent(event);
+```
+
+#### 自定义 DOM 事件
+
+```javascript
+var event = document.createEvent("CustomEvent");
+event.initCustomEvent(...);//4个参数，详细信息如下
+```
+
+- type，触发的事件类型，如“keydown”
+- bubbles，事件是否应该冒泡
+- cancelable，事件是否可以取消
+- detail，任意值，保存在 event 对象的 detail 属性中
+
+
+
